new structure locator